--- a/client/src/scss/pages/_home.scss
+++ b/client/src/scss/pages/_home.scss
@@ -4,6 +4,7 @@
     padding:15vw 0 17vw 0 ;
     width:100vw;
     transition:0.5s;
+    opacity: 0;
     .home-text{
         width: 65%;
         margin:auto;
