--- a/client/src/asset/css/style.css
+++ b/client/src/asset/css/style.css
@@ -586,7 +586,7 @@ h1, h2, h3 {
   z-index: 100;
   width: 100%;
   height: 100vh;
-  background-color: var(--color-white);
+  background-color: var(--color-light);
   transform: translateY(100%);
   transition: 0.8s; }
 
@@ -607,7 +607,8 @@ h1, h2, h3 {
 .home {
   padding: 15vw 0 17vw 0;
   width: 100vw;
-  transition: 0.5s; }
+  transition: 0.5s;
+  opacity: 0; }
   .home .home-text {
     width: 65%;
     margin: auto;
