--- a/client/src/scss/module/_loading.scss
+++ b/client/src/scss/module/_loading.scss
@@ -25,7 +25,7 @@
     z-index: 100;
     width: 100%;
     height: 100vh;
-    background-color: $color-white;
+    background-color: $color-light;
     transform: translateY(100%);
     transition: 0.8s;
 }
