--- a/client/src/scss/module/_footer.scss
+++ b/client/src/scss/module/_footer.scss
@@ -4,7 +4,8 @@
     bottom:0;
     left:0;
     width: 100%;
-    padding: 0 7vw 4vw 7vw;
+    margin-bottom: 4vw;
+    padding: 0 7vw 0 7vw;
     color:$color-white;
     font-weight: 400;
     z-index: 98;
