--- a/client/src/scss/module/_header.scss
+++ b/client/src/scss/module/_header.scss
@@ -4,7 +4,8 @@
   top: 0;
   left: 0;
   width: 100%;
-  padding: 4vw 7vw 0 7vw;
+  margin-top: 4vw;
+  padding: 0 7vw 0 7vw;
   color: $color-white;
   font-weight: 400;
   visibility:hidden;
