--- a/client/src/scss/global/_mixins.scss
+++ b/client/src/scss/global/_mixins.scss
@@ -144,3 +144,7 @@
         stroke-dasharray: 0;
     }
 }
+@keyframes scaleTrans {
+    0%   {transform: scale(0.9);}
+    100% {transform: scale(1.2);}
+  }
