--- a/client/src/scss/global/_global.scss
+++ b/client/src/scss/global/_global.scss
@@ -111,7 +111,7 @@ h1,h2,h3{
             display:none
         }
         .wrapper{
-            height:100vh;
+            height:100%;
         }
     }
 }
