--- a/client/src/scss/global/_mixins.scss
+++ b/client/src/scss/global/_mixins.scss
@@ -148,3 +148,24 @@
     0%   {transform: scale(0.9);}
     100% {transform: scale(1.2);}
   }
+@keyframes elasticus{
+    0%{
+        transform: scale(1, 0);
+        transform-origin: 0% 0%
+    }
+
+    50%{
+        transform: scale(1, 1);
+        transform-origin: 0% 0%
+    }
+
+    50.1%{
+        transform: scale(1, 1);
+        transform-origin: 0% 100%
+    }
+
+    100%{
+        transform: scale(1, 0);
+        transform-origin: 0% 100%
+    }
+}
