--- a/client/src/scss/module/_footer.scss
+++ b/client/src/scss/module/_footer.scss
@@ -33,6 +33,7 @@
 //table and mobile
 @media (max-width: 1200px){
     .footer{
+        // padding: 0 4vw 0 4vw;
         .footer-socials{
             div{
                 i {
