music add button

--- a/client/src/scss/style.scss
+++ b/client/src/scss/style.scss
@@ -12,6 +12,7 @@
 // Module
 @import "module/header";
 @import "module/footer";
+@import "module/more";
 @import "module/noise";
 @import "module/cursor";
 @import "module/menu";
