--- a/client/src/asset/css/style.css
+++ b/client/src/asset/css/style.css
@@ -109,6 +109,12 @@
     transform: scale(1, 0);
     transform-origin: 0% 100%; } }
 
+@keyframes rotate {
+  from {
+    transform: rotate(360deg); }
+  to {
+    transform: rotate(0); } }
+
 /*-------------------------- 
       Global Styles
 ---------------------------*/
@@ -341,6 +347,100 @@ h1, h2, h3 {
     font-size: 5vw; }
   .footer .footer-socials div + div {
     margin-top: 2vw; } }
+
+/*==================== MORE ====================*/
+.more {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  z-index: 99;
+  height: 100%;
+  width: 100%;
+  margin: auto;
+  padding: 4vw 7vw;
+  pointer-events: none;
+  visibility: hidden; }
+  .more__div {
+    position: relative;
+    height: 100%; }
+    .more__div .brand {
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 4vw;
+      height: 4vw;
+      top: 8vw;
+      right: 15vw;
+      pointer-events: visible;
+      opacity: 0.3;
+      transition: 0.2s; }
+      .more__div .brand .icon-circle {
+        width: 4vw;
+        height: 4vw;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+        .more__div .brand .icon-circle__child {
+          width: 3vw;
+          height: 3vw;
+          border-radius: 50%;
+          display: flex;
+          border: 1px solid var(--color-white);
+          justify-content: center;
+          align-items: center; }
+          .more__div .brand .icon-circle__child .svg-play {
+            margin-left: 0.1vw; }
+          .more__div .brand .icon-circle__child svg {
+            width: 0.9vw;
+            font-size: 7px;
+            fill: var(--color-white); }
+      .more__div .brand .brand-label {
+        transition: all 0.2s ease-in-out; }
+        .more__div .brand .brand-label svg {
+          position: absolute;
+          left: -90%;
+          top: -90%;
+          height: 280%;
+          width: 280%;
+          pointer-events: none;
+          animation-name: rotate;
+          animation-duration: 15s;
+          animation-iteration-count: infinite;
+          animation-timing-function: linear;
+          animation-play-state: paused; }
+          .more__div .brand .brand-label svg text {
+            font-family: "Inter", sans-serif;
+            font-size: 19px;
+            letter-spacing: 2.2px;
+            font-variation-settings: "wght" 650;
+            fill: var(--color-white);
+            text-transform: uppercase;
+            transition: 0.5s; }
+      .more__div .brand:hover .brand-label svg {
+        animation-play-state: running; }
+  .more .svgMore-active {
+    animation-play-state: running !important; }
+  .more .svgMore-opacity {
+    opacity: 1 !important; }
+
+@media (max-width: 1200px) {
+  .more__div .brand {
+    width: 8vw;
+    height: 8vw;
+    top: 40vw; }
+    .more__div .brand .icon-circle {
+      width: 6vw;
+      height: 6vw; }
+      .more__div .brand .icon-circle__child {
+        width: 6vw;
+        height: 6vw; }
+        .more__div .brand .icon-circle__child svg {
+          width: 1.8vw; }
+    .more__div .brand .brand-label svg text {
+      font-size: 19px;
+      letter-spacing: 2.2px; } }
 
 /*==================== NOISE ====================*/
 .noise::before {
